[gd_scene load_steps=27 format=3 uid="uid://cc2ynqa8j23x4"]

[ext_resource type="Texture2D" uid="uid://cvsd2ot2wt4uv" path="res://Assets/Stages/07/Enemies/confuser7_0001.png" id="1_k3mqd"]
[ext_resource type="Texture2D" uid="uid://cua0log3hha0k" path="res://Assets/Misc/Shadow.png" id="1_ok5v7"]
[ext_resource type="Script" path="res://Scenes/Stages/Stage7/Enemies/confuser_7.gd" id="1_u0n2o"]
[ext_resource type="Texture2D" uid="uid://b523npafn5ofx" path="res://Assets/Stages/07/Enemies/confuser7_0002.png" id="2_ax3lm"]
[ext_resource type="PackedScene" uid="uid://c8t86jeql5cgb" path="res://Scenes/Stages/Stage7/bullet_7.tscn" id="2_osl2o"]
[ext_resource type="Texture2D" uid="uid://d0oddvi6lkruq" path="res://Assets/Stages/07/Enemies/confuser7_0003.png" id="3_42ndv"]
[ext_resource type="PackedScene" uid="uid://dbsrta84vya0" path="res://Scenes/Stages/Stage7/confusion_beam_7.tscn" id="3_yxgu7"]
[ext_resource type="Texture2D" uid="uid://bip6emv2r77wd" path="res://Assets/Stages/07/Enemies/confuser7_0004.png" id="4_16g38"]
[ext_resource type="Texture2D" uid="uid://beqht2vywwu7y" path="res://Assets/Stages/07/Enemies/confuser7_0005.png" id="5_knf4q"]
[ext_resource type="Texture2D" uid="uid://bavmkqq28hqwy" path="res://Assets/Stages/07/Enemies/confuser7_0006.png" id="6_m7cqh"]
[ext_resource type="Texture2D" uid="uid://coh8bvysdlbmh" path="res://Assets/Stages/07/Enemies/confuser7_0007.png" id="7_wxk6b"]
[ext_resource type="Texture2D" uid="uid://dqgiotpj5boq7" path="res://Assets/Stages/07/Enemies/confuser7_0008.png" id="8_5qkhq"]
[ext_resource type="Texture2D" uid="uid://cxvlkuw3xlicm" path="res://Assets/Stages/07/Enemies/confuser7_0009.png" id="9_tk76a"]
[ext_resource type="Texture2D" uid="uid://15fsnkqj0b7s" path="res://Assets/Stages/07/Enemies/confuser7_0010.png" id="10_lgrpl"]
[ext_resource type="Texture2D" uid="uid://vtdhcwdxnit8" path="res://Assets/Stages/07/Enemies/confuser7_0011.png" id="11_m6y2v"]
[ext_resource type="Texture2D" uid="uid://bql38gdriprpt" path="res://Assets/Stages/07/Enemies/confuser7_0012.png" id="12_axuxa"]
[ext_resource type="Texture2D" uid="uid://c406kfqxuxkn2" path="res://Assets/Stages/07/Enemies/confuser7_0013.png" id="13_mo3dp"]
[ext_resource type="Texture2D" uid="uid://jfm0cndrxhdv" path="res://Assets/Stages/07/Enemies/confuser7_0014.png" id="14_dfa50"]
[ext_resource type="Texture2D" uid="uid://cma2vb3pbv1jf" path="res://Assets/Stages/07/Enemies/confuser7_0015.png" id="15_fljes"]
[ext_resource type="Texture2D" uid="uid://d1vb1yfajwn71" path="res://Assets/Stages/07/Enemies/confuser7_0016.png" id="16_enshc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r0pos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k3mqd")
}, {
"duration": 1.0,
"texture": ExtResource("2_ax3lm")
}, {
"duration": 1.0,
"texture": ExtResource("3_42ndv")
}, {
"duration": 1.0,
"texture": ExtResource("4_16g38")
}, {
"duration": 1.0,
"texture": ExtResource("5_knf4q")
}, {
"duration": 1.0,
"texture": ExtResource("6_m7cqh")
}, {
"duration": 1.0,
"texture": ExtResource("7_wxk6b")
}, {
"duration": 1.0,
"texture": ExtResource("8_5qkhq")
}, {
"duration": 1.0,
"texture": ExtResource("9_tk76a")
}, {
"duration": 1.0,
"texture": ExtResource("10_lgrpl")
}, {
"duration": 1.0,
"texture": ExtResource("11_m6y2v")
}, {
"duration": 1.0,
"texture": ExtResource("12_axuxa")
}, {
"duration": 1.0,
"texture": ExtResource("13_mo3dp")
}, {
"duration": 1.0,
"texture": ExtResource("14_dfa50")
}, {
"duration": 1.0,
"texture": ExtResource("15_fljes")
}, {
"duration": 1.0,
"texture": ExtResource("16_enshc")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jik1g"]
radius = 28.0

[sub_resource type="Animation" id="Animation_i58jn"]
resource_name = "Bouncer"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(8, -24), Vector2(8, -39)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8axkt"]
_data = {
"Bouncer": SubResource("Animation_i58jn")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3r3qe"]
radius = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ulahu"]
radius = 19.6873
height = 92.0955

[node name="Confuser7" type="RigidBody2D" groups=["Enemy"]]
collision_layer = 21
collision_mask = 21
gravity_scale = 0.0
lock_rotation = true
linear_damp = 4.0
script = ExtResource("1_u0n2o")
bullet = ExtResource("2_osl2o")
beam = ExtResource("3_yxgu7")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 31)
scale = Vector2(0.13, 0.13)
texture = ExtResource("1_ok5v7")

[node name="EnemySprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, -24)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_k3mqd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, -24)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_r0pos")
autoplay = "default"
frame_progress = 0.787988

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_jik1g")

[node name="Bouncer" type="AnimationPlayer" parent="."]
autoplay = "Bouncer"
libraries = {
"": SubResource("AnimationLibrary_8axkt")
}

[node name="Hitbox" type="Area2D" parent="." groups=["EnemyHitbox"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(13, -42)
shape = SubResource("CircleShape2D_3r3qe")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(4, -5)
rotation = 1.4591
shape = SubResource("CapsuleShape2D_ulahu")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="ShootTimer2" type="Timer" parent="."]
wait_time = 16.0

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="ShootTimer2" to="." method="_on_shoot_timer_2_timeout"]
